syntax = "proto3";

// 定义go生成后的包名
option go_package = "./;baseApi";
package base;
// protoc -I=. -I=$GOPATH/pkg/mod --go-grpc_out=. --gogo_out=. *.proto
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
message UserLoginReq {
  string UserName = 1 [json_name = "user_name", (gogoproto.jsontag) = "user_name"];
  string Password = 2 [json_name = "password", (gogoproto.jsontag) = "password"];
}

message UserLoginResp {
  string UserId = 1 [json_name = "user_id", (gogoproto.jsontag) = "user_id"];
  string Token = 2 [json_name = "token", (gogoproto.jsontag) = "token"];
}

message UserRegisterReq {
  string UserName = 1 [json_name = "user_name", (gogoproto.jsontag) = "user_name"];
  string Password = 2 [json_name = "password", (gogoproto.jsontag) = "password"];
}

message UserRegisterResp {
  string UserId = 1 [json_name = "user_id", (gogoproto.jsontag) = "user_id"];
  string Token = 2 [json_name = "token", (gogoproto.jsontag) = "token"];
}

message UserInfoReq {
  string UserId = 1 [json_name = "user_id", (gogoproto.jsontag) = "user_id"];
}

message UserInfo {
  string UserId = 1 [json_name = "user_id", (gogoproto.jsontag) = "user_id"];
  string UserName = 2 [json_name = "user_name", (gogoproto.jsontag) = "user_name"];
  int64 FollowCount = 3 [json_name = "follow_count", (gogoproto.jsontag) = "follow_count"];
  int64 FollowerCount = 4 [json_name = "follower_count", (gogoproto.jsontag) = "follower_count"];
  int64 IsFollow = 5 [json_name = "is_follow", (gogoproto.jsontag) = "is_follow"];
  string Avatar = 6 [json_name = "avatar", (gogoproto.jsontag) = "avatar"];
  int64 PublishNum = 7 [json_name = "publish_num", (gogoproto.jsontag) = "publish_num"];
  int64 FavouriteNum = 8 [json_name = "favourite_num", (gogoproto.jsontag) = "favourite_num"];
  int64 LikeNum = 9 [json_name = "like_num", (gogoproto.jsontag) = "like_num"];
  int64 ReceivedLikeNum = 10 [json_name = "received_like_num", (gogoproto.jsontag) = "received_like_num"];
}

message UserInfoResp {
  UserInfo User = 1 [json_name = "user", (gogoproto.jsontag) = "user"];
}

message VideoInfo {
  string VideoId = 1 [json_name = "password", (gogoproto.jsontag) = "video_id"];
  UserInfo UserInfo = 2 [json_name = "user_info", (gogoproto.jsontag) = "user_info"];
  int64 FavoriteCount = 3 [json_name = "favourite_count", (gogoproto.jsontag) = "favourite_count"];
  int64 CommentCount = 4 [json_name = "comment_count", (gogoproto.jsontag) = "comment_count"];
  int64 IsFavorite = 5 [json_name = "is_favourite", (gogoproto.jsontag) = "is_favourite"];
  string Title = 6 [json_name = "title", (gogoproto.jsontag) = "title"];
}

message CommentInfo {
  string CommentId = 1 [json_name = "comment_id", (gogoproto.jsontag) = "comment_id"];
  UserInfo User = 2 [json_name = "user", (gogoproto.jsontag) = "user"];
  string VideoId = 3 [json_name = "video_id", (gogoproto.jsontag) = "video_id"];
  string Content = 4 [json_name = "content", (gogoproto.jsontag) = "content"];
  int64 PublishDate = 5 [json_name = "publish_date", (gogoproto.jsontag) = "publish_date"];
  int64 Replies = 6 [json_name = "replies", (gogoproto.jsontag) = "replies"];
  int64 LikeCount = 7  [json_name = "like_count", (gogoproto.jsontag) = "like_count"];
  int64 HasLike = 8  [json_name = "has_like", (gogoproto.jsontag) = "has_like"];
}

message CreateCommentReq {
  string VideoId = 1 [json_name = "video_id", (gogoproto.jsontag) = "video_id"];
  int64 ActionType = 2 [json_name = "action_type", (gogoproto.jsontag) = "action_type"];
  string Content = 3 [json_name = "content", (gogoproto.jsontag) = "content"];
  string CommentId = 4 [json_name = "comment_id", (gogoproto.jsontag) = "comment_id"];
  string UserID = 5 [json_name = "user_id", (gogoproto.jsontag) = "user_id"];
  string RootId = 6 [json_name = "root_id", (gogoproto.jsontag) = "root_id"];
  string  ParentId = 7 [json_name = "parent_id", (gogoproto.jsontag) = "parent_id"];
}

message CreateCommentResp {
  string CommentId = 1 [json_name = "comment_id", (gogoproto.jsontag) = "comment_id"];
}

message CommentListReq {
  string VideoId = 1 [json_name = "video_id", (gogoproto.jsontag) = "video_id"];
  string Token = 2 [json_name = "token", (gogoproto.jsontag) = "token"];
  string ParentID = 3 [json_name = "parent_id", (gogoproto.jsontag) = "parent_id"];
  string RootID = 4 [json_name = "root_id", (gogoproto.jsontag) = "root_id"];
}

message CommentListResp {
  repeated CommentInfo List = 1 [json_name = "comment_info", (gogoproto.jsontag) = "comment_info"];
  int64 HasNext = 7 [json_name = "has_next", (gogoproto.jsontag) = "has_next"];
  string NextPageToken = 8 [json_name = "next_page_token", (gogoproto.jsontag) = "next_page_token"];
}

message LikeVideoActionReq {
  string UserId = 1 [json_name = "user_id", (gogoproto.jsontag) = "user_id"];
  string VideoId = 2 [json_name = "video_id", (gogoproto.jsontag) = "video_id"];
  int64 ActionType = 3 [json_name = "action_type", (gogoproto.jsontag) = "action_type"];
}
message LikeVideoActionResp {
}

message VideoLikeListReq {
  string UserId = 1 [json_name = "user_id", (gogoproto.jsontag) = "user_id"];
}
message VideoLikeListResp {
  repeated VideoInfo VideoList = 1 [json_name = "video_info", (gogoproto.jsontag) = "video_info"];
}


message LikeCommentReq {
  string CommentID = 1 [json_name = "comment_id", (gogoproto.jsontag) = "comment_id"];
  int64 ActionType = 2 [json_name = "action_type", (gogoproto.jsontag) = "action_type"];
  string UserId = 3 [json_name = "user_id", (gogoproto.jsontag) = "user_id"];
}
message LikeCommentResp {
}

message FollowListReq {
  string UserId = 1 [json_name = "user_id", (gogoproto.jsontag) = "user_id"];
}
message FollowListResp {
  repeated UserInfo User = 1 [json_name = "user_info", (gogoproto.jsontag) = "user_info"];
}

message FollowerListReq {
  string UserId = 1 [json_name = "user_id", (gogoproto.jsontag) = "user_id"];
}
message FollowerListResp {
  repeated UserInfo User = 1 [json_name = "user_info", (gogoproto.jsontag) = "user_info"];
}

message FollowReq {
  string UserId = 1 [json_name = "user_id", (gogoproto.jsontag) = "user_id"];
  string ToUserId = 2 [json_name = "to_user_id", (gogoproto.jsontag) = "to_user_id"];
  int64 Action = 3  [json_name = "action", (gogoproto.jsontag) = "action"];
}
message FollowResp {
}


// 定义接口
service BaseService {
  rpc UserRegister(UserRegisterReq) returns (UserRegisterResp);
  rpc UserLogin(UserLoginReq) returns (UserLoginResp);
  rpc UserInfo(UserInfoReq) returns (UserInfoResp);
  rpc CreateComment (CreateCommentReq) returns (CreateCommentResp);
  rpc CommentList (CommentListReq) returns (CommentListResp);
  rpc LikeVideoAction (LikeVideoActionReq) returns (LikeVideoActionResp);
  rpc VideoLikeList (VideoLikeListReq) returns (VideoLikeListResp);
  rpc LikeComment (LikeCommentReq) returns (LikeCommentResp);
  rpc FollowList (FollowListReq) returns (FollowListResp);
  rpc FollowerList (FollowerListReq) returns (FollowerListResp);
  rpc Follow (FollowReq) returns (FollowResp);
}